Completes the app's design and is now ready to build it with vanilla javascript

--- a/src/index.html
+++ b/src/index.html
@@ -28,15 +28,16 @@
             <header>
                 <p class="logo">SushiVille</p>
                 <ul>
-                    <li class="active">HOME</li>
-                    <li>MENU</li>
-                    <li>CONTACT</li>
+                    <li role="button">HOME</li>
+                    <li role="button" class="active">MENU</li>
+                    <li role="button">CONTACT</li>
                 </ul>
             </header>
 
 
             <!-- Home -->
-            <main id="home">
+            <!--<main id="home">
+
                 <div class="splash">
 
                     <p>Authentic Tastes. Authentic Atmosphere.</p>
@@ -52,7 +53,156 @@
 
                 </div>
 
+            </main>-->
+
+
+
+            <!-- Menu -->
+            <main id="menu">
+
+                <div class="card">
+                    <img src="menu_01.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Dragon Roll</h3>
+                        <p>A roll with shrimp tempura, cucumber, avocado, and eel.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_02.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>California Roll</h3>
+                        <p>A classic roll with avocado, cucumber, and imitation crab.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_03.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Crunch Roll</h3>
+                        <p>A roll with shrimp tempura, cucumber, avocado, and panko crumbs.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_04.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Philadelphia Roll</h3>
+                        <p>A roll with cream cheese, avocado, and smoked salmon.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_05.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Rainbow Roll</h3>
+                        <p>A roll with salmon, tuna, yellowtail, eel, and avocado.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_06.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Spicy Tuna Roll</h3>
+                        <p>A roll with tuna, mayonnaise, sriracha, and cucumber.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_07.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Tempura Roll</h3>
+                        <p>A roll with shrimp tempura and avocado.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_08.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Spider Roll</h3>
+                        <p>A roll with soft shell crab, cucumber, and avocado.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_09.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Salmon Roll</h3>
+                        <p>A roll with salmon and cucumber.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_10.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Tuna Roll</h3>
+                        <p>A roll with tuna and cucumber.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_11.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Yellowtail Roll</h3>
+                        <p>A roll with yellowtail and cucumber.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="menu_12.jpg" alt="Menu">
+                    <div class="dish-description">
+                        <h3>Eel Roll</h3>
+                        <p>A roll with eel and cucumber.</p>
+                    </div>
+                </div>
+
             </main>
+
+
+
+            <!-- Contact -->
+            <!--<main id="contact">
+
+                <div class="card">
+                    <h2>Get in touch!</h2>
+
+                    <p class="subtitle">
+                        You can contact our team every day from 7am until 11pm, and we will be happy 
+                        to help with your reservation.
+                    </p>
+
+                    <h3>Call us</h3>
+
+                    <div class="row">
+                        <span class="md-icon">call</span> <span>1 (234) 567-891</span>
+                    </div>
+
+                    <div class="row">
+                        <span class="md-icon">call</span> <span>1 (234) 987-654</span>
+                    </div>
+
+                    <hr>
+
+                    <h3>Email us</h3>
+
+                    <div class="row">
+                        <span class="md-icon">mail</span> <span>hello@sushiville.com</span>
+                    </div>
+
+                    <hr>
+
+                    <h3>Visit us</h3>
+
+                    <div class="row">
+                        <span class="md-icon">pin_drop</span> 
+                        <span>121 Rock Street, 21 Avenue New York, NY 92103-9000</span>
+                    </div>
+                    <img src="addr.png" alt="Address">
+
+                </div>
+
+            </main>-->
+
         </div>
 
     </body>
